--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <link rel="icon" href="images/knight.svg">
     </link>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171629673-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
+        gtag('config', 'UA-171629673-2');
+    </script>
 </head>
 
 <body>
