--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div>
-                <button onclick="resetGame()">Forfeit</button>
+                <p onclick="resetGame()">Forfeit</p>
             </div>
             <div>
                 <!--<p>Scores and achievements</p>-->
@@ -693,7 +693,7 @@
         document.querySelector(".sidebar").addEventListener("click", (e) => {
             let path = e.path || e.composedPath();
             for (let i of (path)) {
-                if (i.matches(".sidebar>div>p")) {
+                if (i.matches(".sidebar>div>p") && i.innerText!="Forfeit") {
                     document.querySelectorAll(".sidebar>div").forEach(i => i.classList.remove("selected"));
                     i.parentElement.classList.add("selected");
                 }
