Forfeit no longer saves highscores

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                 document.querySelector(".boardModal").style.display = "grid";
                 document.querySelector(".loss_modal").style.display = "block";
                 document.querySelector(".loss_modal span").innerText = playerScore + " You have forfeited the game!" ;
-                updateHighscores(playerScore, gameMode);
+                //updateHighscores(playerScore, gameMode);
                 document.querySelector(".gmode").disabled = false;
                 gameIsPlayed = false;
             }
