--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         <div class="board">
 
             <div class="ach_modal"
-                style="position:absolute; display:none; place-items: center center; width:100%;height:100%;z-index:1000">
-                <div style="text-align: center; display:block; padding: 20px 80px; background: rgba(0,0,0,0.7); color:white"
-                    class="ach_modal_inner">
-                    <h3>Achievement Unlocked!</h3>
-                    <p id="ach_modal_name"><span></span></p>
-                    <p id="ach_modal_descr"><span></span></p>
-                </div>
-                <button onclick="dismissModal()">Dismiss</button>
+            style="position:absolute; top: 0; bottom: 0;left: 0;right: 0; margin: auto; bottom: 200px; opacity: 1; visibility: hidden; z-index:1000">
+            <div style="text-align: center; display:block; padding: 5px 10px; background: rgba(0,0,0,0.7); color:white"
+                class="ach_modal_inner">
+                <h3>Achievement Unlocked!</h3>
+                <p id="ach_modal_name"><span></span></p>
+                <h5 id="ach_modal_descr"><span></span></h5>
             </div>
+            <!--<button onclick="dismissModal()">Dismiss</button>-->
+        </div>
 
             <!-- generate board here -->
             <div class="boardModal"
