Add Dark Mode Slider

--- a/index.html
+++ b/index.html
@@ -163,6 +163,12 @@
             </div>
         </div>
     </div>
+    <div class="dark-mode">
+        <label class="dark-mode-switch">
+            <input type="checkbox">
+            <span class="slider"></span>
+        </label>
+    </div>
     <style>
         .board {
             display: grid;
@@ -243,7 +249,60 @@
             /* Adjust with JavaScript */
             height: 5px;
         }
+
+        .dark-mode{
+            position: fixed;
+            top: 5px;
+            right: 5px;
+        }
         
+        .dark-mode-switch {
+        position: relative;
+        display: inline-block;
+        width: 60px;
+        height: 34px;
+        }
+
+        .dark-mode-switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+        }
+
+        .dark-mode-switch .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        border-radius: 34px;
+        background-color: #ccc;
+        transition: .4s;
+        }
+
+        .dark-mode-switch .slider:before {
+        position: absolute;
+        content: "";
+        height: 26px;
+        width: 26px;
+        left: 4px;
+        bottom: 4px;
+        /* background-color: white; */
+        /* border-radius: 50%; */
+        background-image: url("images/dark-mode.svg");
+        transition: .4s;
+        }
+
+        .dark-mode-switch input:checked + .slider {
+        background-color: #ccc;
+        }
+
+        .dark-mode-switch input:checked + .slider:before {
+        transform: translateX(26px);
+        background-image: url("images/light-mode.svg");
+        }
+
         @media screen and (max-aspect-ratio: 4/3) {
             .body-container {
                 flex-direction: column;
