added timerbox and reduced arcade mode countdown to one turn
Signed-off-by: Peter Aloisi <plaloisi@gmail.com>

--- a/index.html
+++ b/index.html
@@ -164,6 +164,12 @@
             </div>
         </div>
     </div>
+    <div class="arcadeMoveTimerBox" id="timer-box">
+      <span class="days"></span>
+      <div class="text">Move Timer</div>
+      <progress value="0" max="2.5" id="progressBar"></progress>
+
+    </div>
     <div class="dark-mode">
         <label class="dark-mode-switch">
             <input type="checkbox">
