--- a/index.html
+++ b/index.html
@@ -164,11 +164,9 @@
             </div>
         </div>
     </div>
-    <div class="arcadeMoveTimerBox" id="timer-box">
-        <span class="days"></span>
-        <div class="text">Move Timer</div>
-        <progress value="0" max="2.5" id="progressBar"></progress>
-
+    <div class="moveTimerBox" id="timer-box"
+        <h1> Move Timer: </h1>
+        <progress value="0" max="2.5" id="timer-bar"></progress>
     </div>
     <div class="dark-mode">
         <label class="dark-mode-switch">
