Added a character encoding for HTML document

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta charset="utf-8" />
     <title>FortKnight</title>
     <link rel="icon" href="images/knight.svg">
     </link>
