Added a call to checkMode to fix bug

--- a/index.html
+++ b/index.html
@@ -166,14 +166,15 @@
             <span class="slider"></span>
         </label>
     </div>
+    <script>document.querySelector('.dark-mode-switch input').checked = false;</script>
     <script src="js/arcade.js"></script>
     <script src="js/piece_object.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/dark_mode.js"></script>
     <script src="js/achievements_highscores.js"></script>
 
     <script src="js/dom_events.js"></script>
     <script src="js/debug.js"></script>
-    <script src="js/dark_mode.js"></script>
 </body>
 
 </html>
