fixing typo in heading

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 
-    <h1 style="text-align: center;">FortKight: Chess Battle Royale</h1>
+    <h1 style="text-align: center;">FortKnight: Chess Battle Royale</h1>
     <div class="body-container">
         <div class="board">
             <div class="ach_modal" style="position:absolute; top: 0; bottom: 0;left: 0;right: 0; margin: auto; bottom: 200px; opacity: 1; visibility: hidden; z-index:1000">
