Add new game mode loop-pieces

--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
                             <input name="diff" value="arcade" type="radio" />
                             Arcade  <text style= "color: red"> (Pieces move based on a timer)</text>
                         </label>
+                        <br>
+                        <label>
+                            <input name="diff" value="loop" type="radio" />
+                            Loop Pieces  <text style= "color: red"> (Pieces on the edge rotate By 90 degrees Anti-Clockwise every move)</text>
+                        </label>
                       </div>
                     </fieldset>
                     <h3>Scoring:</h3>
