--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
                     <p>Pieces will move to take your knight if they can; or randomly otherwise</p>
                     <p>Small pieces block the movement of other pieces, but big pieces don't. However, you can land on small pieces and if a big piece can't move, it dies. </p>
                     <p>Pawns move in direction indicated and can take on forward diagonals.</p>
-
                     <span id="gmode-help" class="hidden">You must <button class="button" onclick="forfeitGame()">Forfeit</button> in order to change the game mode</span>
                     <fieldset class="gmode">
                       <legend><h3>Game Mode Choice</h3></legend>
@@ -105,8 +104,14 @@
                             <input name="diff" value="arcade" type="radio" />
                             Arcade  <text style= "color: red"> (Pieces move based on a timer)</text>
                         </label>
+                        <br>
+                        <label>
+                            <input name="diff" value="loop" type="radio" />
+                            Tornado mode  <text style= "color: red"> (Pieces move like a tornado)</text>
+                        </label>
                       </div>
                     </fieldset>
+                    <div class="ex_instr"></div>
                     <h3>Scoring:</h3>
                     <div class="rules">
                         <p style= "color: #8CA1C5">+1 point for every turn on the field</p>
