Added the new DarkMode function

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </div>
     <div class="dark-mode">
         <label class="dark-mode-switch">
-            <input type="checkbox">
+            <input type="checkbox" onclick="switchDarkMode()">
             <span class="slider"></span>
         </label>
     </div>
