--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             </div>
 
             <!-- generate board here -->
-            <div class="boardModal" style="position:absolute; display:grid; place-items: center center; width:100%;height:100%;z-index:1000">
-                <div style="text-align: center; display:none; padding: 20px 80px; background: rgba(0,0,0,0.7); color:white" class="loss_modal">
+            <div class="boardModal">
+                <div class="loss_modal">
                     <h1 class="fixed-color" style="color:white">You lost :(</h1>
                     <p class="fixed-color" style="color:white">Your score: <span class="fixed-color" style="color:white"></span></p>
                 </div>
