--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
     <h1 style="text-align: center;">FortKnight: Chess Battle Royale</h1>
     <div class="body-container">
         <div class="board">
-            <div class="ach_modal" style="position:absolute; top: 0; bottom: 0;left: 0;right: 0; margin: auto; bottom: 200px; opacity: 1; visibility: hidden; z-index:1000">
-                <div style="text-align: center; display:block; padding: 5px 10px; background: rgba(0,0,0,0.7); color:white" class="ach_modal_inner">
+            <div class="ach_modal"
+                style="position:absolute; top: 0; bottom: 0;left: 0;right: 0; margin: auto; bottom: 200px; opacity: 1; visibility: hidden; z-index:1000">
+                <div style="text-align: center; display:block; padding: 5px 10px; background: rgba(0,0,0,0.7); color:white"
+                    class="ach_modal_inner">
                     <h3>Achievement Unlocked!</h3>
                     <p id="ach_modal_name"><span></span></p>
                     <h5 id="ach_modal_descr"><span></span></h5>
@@ -39,23 +41,24 @@
             <div class="boardModal">
                 <div class="loss_modal">
                     <h1 class="fixed-color" style="color:white">You lost :(</h1>
-                    <p class="fixed-color" style="color:white">Your score: <span class="fixed-color" style="color:white"></span></p>
+                    <p class="fixed-color" style="color:white">Your score: <span class="fixed-color"
+                            style="color:white"></span></p>
                 </div>
                 <button onclick="resetGame();">Begin</button>
             </div>
-
         </div>
         <div id="assets" style="display:none">
             <!--insert images here -->
-            <img style='background:white' id='bishop' src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" version="1.1" width="45" height="45"%3E%3Cg style="opacity:1; fill:none; fill-rule:evenodd; fill-opacity:1; stroke:%23000000; stroke-width:1.5; stroke-linecap:round; stroke-linejoin:round; stroke-miterlimit:4; stroke-dasharray:none; stroke-opacity:1;"%3E%3Cg style="fill:%23000000; stroke:%23000000; stroke-linecap:butt;"%3E%3Cpath d="M 9,36 C 12.39,35.03 19.11,36.43 22.5,34 C 25.89,36.43 32.61,35.03 36,36 C 36,36 37.65,36.54 39,38 C 38.32,38.97 37.35,38.99 36,38.5 C 32.61,37.53 25.89,38.96 22.5,37.5 C 19.11,38.96 12.39,37.53 9,38.5 C 7.646,38.99 6.677,38.97 6,38 C 7.354,36.06 9,36 9,36 z" /%3E%3Cpath d="M 15,32 C 17.5,34.5 27.5,34.5 30,32 C 30.5,30.5 30,30 30,30 C 30,27.5 27.5,26 27.5,26 C 33,24.5 33.5,14.5 22.5,10.5 C 11.5,14.5 12,24.5 17.5,26 C 17.5,26 15,27.5 15,30 C 15,30 14.5,30.5 15,32 z" /%3E%3Cpath d="M 25 8 A 2.5 2.5 0 1 1 20,8 A 2.5 2.5 0 1 1 25 8 z" /%3E%3C/g%3E%3Cpath d="M 17.5,26 L 27.5,26 M 15,30 L 30,30 M 22.5,15.5 L 22.5,20.5 M 20,18 L 25,18" style="fill:none; stroke:%23ffffff; stroke-linejoin:miter;" /%3E%3C/g%3E%3C/svg%3E'>
-            <img style='background:white' id='king' src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" version="1.1" width="45" height="45"%3E%3Cg style="fill:none; fill-opacity:1; fill-rule:evenodd; stroke:%23000000; stroke-width:1.5; stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4; stroke-dasharray:none; stroke-opacity:1;"%3E%3Cpath d="M 22.5,11.63 L 22.5,6" style="fill:none; stroke:%23000000; stroke-linejoin:miter;" id="path6570" /%3E%3Cpath d="M 22.5,25 C 22.5,25 27,17.5 25.5,14.5 C 25.5,14.5 24.5,12 22.5,12 C 20.5,12 19.5,14.5 19.5,14.5 C 18,17.5 22.5,25 22.5,25" style="fill:%23000000;fill-opacity:1; stroke-linecap:butt; stroke-linejoin:miter;" /%3E%3Cpath d="M 11.5,37 C 17,40.5 27,40.5 32.5,37 L 32.5,30 C 32.5,30 41.5,25.5 38.5,19.5 C 34.5,13 25,16 22.5,23.5 L 22.5,27 L 22.5,23.5 C 19,16 9.5,13 6.5,19.5 C 3.5,25.5 11.5,29.5 11.5,29.5 L 11.5,37 z " style="fill:%23000000; stroke:%23000000;" /%3E%3Cpath d="M 20,8 L 25,8" style="fill:none; stroke:%23000000; stroke-linejoin:miter;" /%3E%3Cpath d="M 32,29.5 C 32,29.5 40.5,25.5 38.03,19.85 C 34.15,14 25,18 22.5,24.5 L 22.51,26.6 L 22.5,24.5 C 20,18 9.906,14 6.997,19.85 C 4.5,25.5 11.85,28.85 11.85,28.85" style="fill:none; stroke:%23ffffff;" /%3E%3Cpath d="M 11.5,30 C 17,27 27,27 32.5,30 M 11.5,33.5 C 17,30.5 27,30.5 32.5,33.5 M 11.5,37 C 17,34 27,34 32.5,37" style="fill:none; stroke:%23ffffff;" /%3E%3C/g%3E%3C/svg%3E'>
-            <img style='background:white' id='knight' src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" version="1.1" width="45" height="45"%3E%3Cg style="opacity:1; fill:none; fill-opacity:1; fill-rule:evenodd; stroke:%23000000; stroke-width:1.5; stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4; stroke-dasharray:none; stroke-opacity:1;"%3E%3Cpath d="M 22,10 C 32.5,11 38.5,18 38,39 L 15,39 C 15,30 25,32.5 23,18" style="fill:%23000000; stroke:%23000000;" /%3E%3Cpath d="M 24,18 C 24.38,20.91 18.45,25.37 16,27 C 13,29 13.18,31.34 11,31 C 9.958,30.06 12.41,27.96 11,28 C 10,28 11.19,29.23 10,30 C 9,30 5.997,31 6,26 C 6,24 12,14 12,14 C 12,14 13.89,12.1 14,10.5 C 13.27,9.506 13.5,8.5 13.5,7.5 C 14.5,6.5 16.5,10 16.5,10 L 18.5,10 C 18.5,10 19.28,8.008 21,7 C 22,7 22,10 22,10" style="fill:%23000000; stroke:%23000000;" /%3E%3Cpath d="M 9.5 25.5 A 0.5 0.5 0 1 1 8.5,25.5 A 0.5 0.5 0 1 1 9.5 25.5 z" style="fill:%23ffffff; stroke:%23ffffff;" /%3E%3Cpath d="M 15 15.5 A 0.5 1.5 0 1 1 14,15.5 A 0.5 1.5 0 1 1 15 15.5 z" transform="matrix(0.866,0.5,-0.5,0.866,9.693,-5.173)" style="fill:%23ffffff; stroke:%23ffffff;" /%3E%3Cpath d="M 24.55,10.4 L 24.1,11.85 L 24.6,12 C 27.75,13 30.25,14.49 32.5,18.75 C 34.75,23.01 35.75,29.06 35.25,39 L 35.2,39.5 L 37.45,39.5 L 37.5,39 C 38,28.94 36.62,22.15 34.25,17.66 C 31.88,13.17 28.46,11.02 25.06,10.5 L 24.55,10.4 z " style="fill:%23ffffff; stroke:none;" /%3E%3C/g%3E%3C/svg%3E'>
-            <img style='background:white' id='pawn' src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" version="1.1" width="45" height="45"%3E%3Cpath d="M 22,9 C 19.79,9 18,10.79 18,13 C 18,13.89 18.29,14.71 18.78,15.38 C 16.83,16.5 15.5,18.59 15.5,21 C 15.5,23.03 16.44,24.84 17.91,26.03 C 14.91,27.09 10.5,31.58 10.5,39.5 L 33.5,39.5 C 33.5,31.58 29.09,27.09 26.09,26.03 C 27.56,24.84 28.5,23.03 28.5,21 C 28.5,18.59 27.17,16.5 25.22,15.38 C 25.71,14.71 26,13.89 26,13 C 26,10.79 24.21,9 22,9 z " style="opacity:1; fill:%23000000; fill-opacity:1; fill-rule:nonzero; stroke:%23000000; stroke-width:1.5; stroke-linecap:round; stroke-linejoin:miter; stroke-miterlimit:4; stroke-dasharray:none; stroke-opacity:1;" /%3E%3C/svg%3E'>
-            <img style='background:white' id='queen' src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" version="1.1" width="45" height="45"%3E%3Cg style="opacity:1; fill:000000; fill-opacity:1; fill-rule:evenodd; stroke:%23000000; stroke-width:1.5; stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4; stroke-dasharray:none; stroke-opacity:1;"%3E%3Cg style="fill:%23000000; stroke:none;"%3E%3Ccircle cx="6" cy="12" r="2.75" /%3E%3Ccircle cx="14" cy="9" r="2.75" /%3E%3Ccircle cx="22.5" cy="8" r="2.75" /%3E%3Ccircle cx="31" cy="9" r="2.75" /%3E%3Ccircle cx="39" cy="12" r="2.75" /%3E%3C/g%3E%3Cpath d="M 9,26 C 17.5,24.5 30,24.5 36,26 L 38.5,13.5 L 31,25 L 30.7,10.9 L 25.5,24.5 L 22.5,10 L 19.5,24.5 L 14.3,10.9 L 14,25 L 6.5,13.5 L 9,26 z" style="stroke-linecap:butt; stroke:%23000000;" /%3E%3Cpath d="M 9,26 C 9,28 10.5,28 11.5,30 C 12.5,31.5 12.5,31 12,33.5 C 10.5,34.5 10.5,36 10.5,36 C 9,37.5 11,38.5 11,38.5 C 17.5,39.5 27.5,39.5 34,38.5 C 34,38.5 35.5,37.5 34,36 C 34,36 34.5,34.5 33,33.5 C 32.5,31 32.5,31.5 33.5,30 C 34.5,28 36,28 36,26 C 27.5,24.5 17.5,24.5 9,26 z" style="stroke-linecap:butt;" /%3E%3Cpath d="M 11,38.5 A 35,35 1 0 0 34,38.5" style="fill:none; stroke:%23000000; stroke-linecap:butt;" /%3E%3Cpath d="M 11,29 A 35,35 1 0 1 34,29" style="fill:none; stroke:%23ffffff;" /%3E%3Cpath d="M 12.5,31.5 L 32.5,31.5" style="fill:none; stroke:%23ffffff;" /%3E%3Cpath d="M 11.5,34.5 A 35,35 1 0 0 33.5,34.5" style="fill:none; stroke:%23ffffff;" /%3E%3Cpath d="M 10.5,37.5 A 35,35 1 0 0 34.5,37.5" style="fill:none; stroke:%23ffffff;" /%3E%3C/g%3E%3C/svg%3E'>
-            <img style='background:white' id='rook' src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" version="1.1" width="45" height="45"%3E%3Cg style="opacity:1; fill:000000; fill-opacity:1; fill-rule:evenodd; stroke:%23000000; stroke-width:1.5; stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4; stroke-dasharray:none; stroke-opacity:1;"%3E%3Cpath d="M 9,39 L 36,39 L 36,36 L 9,36 L 9,39 z " style="stroke-linecap:butt;" /%3E%3Cpath d="M 12.5,32 L 14,29.5 L 31,29.5 L 32.5,32 L 12.5,32 z " style="stroke-linecap:butt;" /%3E%3Cpath d="M 12,36 L 12,32 L 33,32 L 33,36 L 12,36 z " style="stroke-linecap:butt;" /%3E%3Cpath d="M 14,29.5 L 14,16.5 L 31,16.5 L 31,29.5 L 14,29.5 z " style="stroke-linecap:butt;stroke-linejoin:miter;" /%3E%3Cpath d="M 14,16.5 L 11,14 L 34,14 L 31,16.5 L 14,16.5 z " style="stroke-linecap:butt;" /%3E%3Cpath d="M 11,14 L 11,9 L 15,9 L 15,11 L 20,11 L 20,9 L 25,9 L 25,11 L 30,11 L 30,9 L 34,9 L 34,14 L 11,14 z " style="stroke-linecap:butt;" /%3E%3Cpath d="M 12,35.5 L 33,35.5 L 33,35.5" style="fill:none; stroke:%23ffffff; stroke-width:1; stroke-linejoin:miter;" /%3E%3Cpath d="M 13,31.5 L 32,31.5" style="fill:none; stroke:%23ffffff; stroke-width:1; stroke-linejoin:miter;" /%3E%3Cpath d="M 14,29.5 L 31,29.5" style="fill:none; stroke:%23ffffff; stroke-width:1; stroke-linejoin:miter;" /%3E%3Cpath d="M 14,16.5 L 31,16.5" style="fill:none; stroke:%23ffffff; stroke-width:1; stroke-linejoin:miter;" /%3E%3Cpath d="M 11,14 L 34,14" style="fill:none; stroke:%23ffffff; stroke-width:1; stroke-linejoin:miter;" /%3E%3C/g%3E%3C/svg%3E'>
+            <!-- piece-images -->
+            <img src="images/bishop.svg" id="bishop" style="background: white" />
+            <img src="images/king.svg" id="king" style="background: white" />
+            <img src="images/knight.svg" id="knight" style="background: white" />
+            <img src="images/pawn.svg" id="pawn" style="background: white" />
+            <img src="images/queen.svg" id="queen" style="background: white" />
+            <img src="images/rook.svg" id="rook" style="background: white" />
+            <img src="images/wknight.svg" id="wknight" style="background: white" />
             <img style='background:white' id='up_arrow' src='images/up_arrow.svg'>
             <img style='background:white' id='down_arrow' src='images/down_arrow.svg'>
-            <img style='background:white' id='wknight' src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" version="1.1" width="45" height="45"%3E%3Cg style="opacity:1; fill:none; fill-opacity:1; fill-rule:evenodd; stroke:%23000000; stroke-width:1.5; stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4; stroke-dasharray:none; stroke-opacity:1;"%3E%3Cpath d="M 22,10 C 32.5,11 38.5,18 38,39 L 15,39 C 15,30 25,32.5 23,18" style="fill:%23ffffff; stroke:%23000000;" /%3E%3Cpath d="M 24,18 C 24.38,20.91 18.45,25.37 16,27 C 13,29 13.18,31.34 11,31 C 9.958,30.06 12.41,27.96 11,28 C 10,28 11.19,29.23 10,30 C 9,30 5.997,31 6,26 C 6,24 12,14 12,14 C 12,14 13.89,12.1 14,10.5 C 13.27,9.506 13.5,8.5 13.5,7.5 C 14.5,6.5 16.5,10 16.5,10 L 18.5,10 C 18.5,10 19.28,8.008 21,7 C 22,7 22,10 22,10" style="fill:%23ffffff; stroke:%23000000;" /%3E%3Cpath d="M 9.5 25.5 A 0.5 0.5 0 1 1 8.5,25.5 A 0.5 0.5 0 1 1 9.5 25.5 z" style="fill:%23000000; stroke:%23000000;" /%3E%3Cpath d="M 15 15.5 A 0.5 1.5 0 1 1 14,15.5 A 0.5 1.5 0 1 1 15 15.5 z" transform="matrix(0.866,0.5,-0.5,0.866,9.693,-5.173)" style="fill:%23000000; stroke:%23000000;" /%3E%3C/g%3E%3C/svg%3E'>
             <!--end insert images -->
         </div>
         <div class="sidebar">
@@ -68,58 +71,64 @@
                     </div>
                     <h2>Instructions</h2>
                     <p>Click on a square to move.</p>
-                    <p>Pieces start small for 3 turns. Small pieces are harmless. Land on pieces to take them, but don't let them land on you!</p>
+                    <p>Pieces start small for 3 turns. Small pieces are harmless. Land on pieces to take them, but don't
+                        let them land on you!</p>
                     <p>To skip a turn, click your knight.</p>
                     <p>Pieces will move to take your knight if they can; or randomly otherwise</p>
-                    <p>Small pieces block the movement of other pieces, but big pieces don't. However, you can land on small pieces and if a big piece can't move, it dies. </p>
+                    <p>Small pieces block the movement of other pieces, but big pieces don't. However, you can land on
+                        small pieces and if a big piece can't move, it dies. </p>
                     <p>Pawns move in direction indicated <b>every two turns</b> and can take on forward diagonals in any turn.</p>
 
-                    <span id="gmode-help" class="hidden">You must <button class="button" onclick="forfeitGame()">Forfeit</button> in order to change the game mode</span>
+                    <span id="gmode-help" class="hidden">You must <button class="button"
+                            onclick="forfeitGame()">Forfeit</button> in order to change the game mode</span>
                     <fieldset class="gmode">
-                      <legend><h3>Game Mode Choice</h3></legend>
-                      <div id = "wrap">
-                        <label>
-                            <input name="diff" value="classic" type="radio" checked />
-                            Classic
-                        </label>
-                        <br>
-                        <label>
-                            <input name="diff" value="pacifist" type="radio" />
-                            Pacifist <text style= "color: red">  (No score for kills)</text>
-                        </label>
-                        <br>
-                        <label>
-                            <input name="diff" value="knightmare" type="radio" />
-                            Knightmare  <text style= "color: red"> (Only knight pieces)</text>
-                        </label>
-                        <br>
-                        <label>
-                            <input name="diff" value="strategist" type="radio" />
-                            Strategist  <text style= "color: red"> (Pieces have move order)</text>
-                        </label>
-                        <br>
-                        <label>
-                            <input name="diff" value="drunk" type="radio" />
-                            Drunk pieces  <text style= "color: red"> (Pieces always move randomly)</text>
-                        </label>
-                        <br>
-                        <label>
-                            <input name="diff" value="arcade" type="radio" />
-                            Arcade  <text style= "color: red"> (Pieces move based on a timer)</text>
-                        </label>
-                        <br>
-                        <label>
-                            <input name="diff" value="loop" type="radio" />
-                            Loop Pieces  <text style= "color: red"> (Pieces on the edge rotate By 90 degrees Anti-Clockwise every move)</text>
-                        </label>
-                      </div>
+                        <legend>
+                            <h3>Game Mode Choice</h3>
+                        </legend>
+                        <div id="wrap">
+                            <label>
+                                <input name="diff" value="classic" type="radio" checked />
+                                Classic
+                            </label>
+                            <br>
+                            <label>
+                                <input name="diff" value="pacifist" type="radio" />
+                                Pacifist <text style="color: red"> (No score for kills)</text>
+                            </label>
+                            <br>
+                            <label>
+                                <input name="diff" value="knightmare" type="radio" />
+                                Knightmare <text style="color: red"> (Only knight pieces)</text>
+                            </label>
+                            <br>
+                            <label>
+                                <input name="diff" value="strategist" type="radio" />
+                                Strategist <text style="color: red"> (Pieces have move order)</text>
+                            </label>
+                            <br>
+                            <label>
+                                <input name="diff" value="drunk" type="radio" />
+                                Drunk pieces <text style="color: red"> (Pieces always move randomly)</text>
+                            </label>
+                            <br>
+                            <label>
+                                <input name="diff" value="arcade" type="radio" />
+                                Arcade <text style="color: red"> (Pieces move based on a timer)</text>
+                            </label>
+                            <br>
+                            <label>
+                                <input name="diff" value="loop" type="radio" />
+                                Loop Pieces <text style="color: red"> (Pieces on the edge rotate By 90 degrees
+                                    Anti-Clockwise every move)</text>
+                            </label>
+                        </div>
                     </fieldset>
                     <h3>Scoring:</h3>
                     <div class="rules">
-                        <p style= "color: #8CA1C5">+1 point for every turn on the field</p>
-                        <p style= "color: #467AD5">+2 points for every king taken</p>
-                        <p style= "color: #CF469F">+3 points for every knight, bishop, rook taken</p>
-                        <p style= "color: #30DE0D">+5 points for every queen taken</p>
+                        <p style="color: #8CA1C5">+1 point for every turn on the field</p>
+                        <p style="color: #467AD5">+2 points for every king taken</p>
+                        <p style="color: #CF469F">+3 points for every knight, bishop, rook taken</p>
+                        <p style="color: #30DE0D">+5 points for every queen taken</p>
                     </div>
                     <h3>FAQ</h3>
                     <p>yes, i know the chessboard only has 7 squares, not 8, but i wanted a centre square</p>
