--- a/index.html
+++ b/index.html
@@ -22,8 +22,21 @@
 </head>
 
 <body>
+    <header>
+        <img src="images/logo.png" alt="logo" />
+        <div class="title">
+            <h1>Fortknight</h1>
+            <h2>Chess Battle Royale</h2>
+        </div>
+        <div class="dark-mode">
+            <label class="dark-mode-switch">
+                <input type="checkbox" onclick="switchDarkMode()">
+                <span class="slider"></span>
+            </label>
+        </div>
+    </header>
 
-    <h1 style="text-align: center;">FortKnight: Chess Battle Royale</h1>
+
     <div class="body-container">
         <div class="board">
             <div class="ach_modal"
@@ -183,13 +196,6 @@
         <h1> Move Timer: </h1>
         <progress value="0" max="2.5" id="timer-bar"></progress>
     </div>
-    <div class="dark-mode">
-        <label class="dark-mode-switch">
-            <input type="checkbox" onclick="switchDarkMode()">
-            <span class="slider"></span>
-        </label>
-    </div>
-
     <script>document.querySelector('.dark-mode-switch input').checked = false;</script>
     <script src="js/utils.js"></script>
     <script src="js/arcade.js"></script>
