--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <header>
-        <img src="images/logo.png" alt="logo" />
+        <img src="images/logo.webp" alt="logo" />
         <div class="title">
             <h1>Fortknight</h1>
             <h2>Chess Battle Royale</h2>
