--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@
                     </div>
                 </div>
             </div>
+            <div class='toggleMovementProjection'>
+                <input type="checkbox" onclick="projectMovement()">
+                <label class="labelMovementProjection" for="" id="onbtn">ON</label>
+                <label class="labelMovementProjection" for="" id="offbtn">OFF</label>
+                <label style="font-size: 10px"><br>Toggle Knight's<br>possible moves</label>
+            </div>
 
             <div class='debugTab'>
                 <p onclick="showDebug()">DEBUG</p>
@@ -170,7 +176,7 @@
         </div>
     </div>
 
-    <div class="moveTimerBox" id="timer-box"
+    <div class="moveTimerBox" id="timer-box">
         <h1> Move Timer: </h1>
         <progress value="0" max="2.5" id="timer-bar"></progress>
     </div>
@@ -180,6 +186,7 @@
             <span class="slider"></span>
         </label>
     </div>
+
     <script>document.querySelector('.dark-mode-switch input').checked = false;</script>
     <script src="js/arcade.js"></script>
     <script src="js/piece_object.js"></script>
